# Eindfeest

./: aduino_device.py  cli.py  diode_experiment.py  gui.py  pyproject.toml  view.py
src/: kansberekening.py
src/eindfeest/: kaartteller.py  kaartteller.ui  kansberekening.py  pyproject.toml
src/eindfeest/src/eindfeest/: gui.py
