[tool.poetry]
name = "eindfeest"
version = "0.1.0"
description = ""
authors = ["semoussoren <soussoren7@gmail.com>"]
readme = "README.md"
packages = [{include = "eindfeest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
